2003-08-17  David Byers  <byers@lysator.liu.se>

	Support UTC time in the server:
	* startup.el (lyskom): Select UTC time format if the server
	supports it.

	* utilities.el (lyskom-set-connection-format): New function.

	* parse.el (lyskom-parse-time): Use lyskom-create-time-from-utc.
	Convert day-of-year to starting from one.
	(lyskom-init-parse): Add the parse buffer as a child of the main
	buffer so UTC setting is propagated to it.

	* komtypes.el (lyskom-create-time-from-utc): Simplified. It seems
	that the right thing to do is pass zero in TZ to encode-time. This
	should speed things up slightly in normal cases. Handle case when
	server does not use UTC.

	* services.el: (initiate-get-last-text): Commented out since we
	can't convert local time to UTC, which this function requires.

	Go over EMPTY and MUSTMATCH parameters to lyskom-read-conf-stat:
	* startup.el (kom-start-anew): Don't allow EMPTY when logging on.

	* filter.el (kom-filter-subject): Don't use /=. Use not eq
	instead.
	(kom-filter-author): Same here.
	(kom-filter-text): Same here.

	* commands2.el (kom-create-aux-item): Set MUSTMATCH when readinf
	conference name.

	* vars.el.in (lyskom-default-conference-strategy): Default for
	kom-set-permitted-submitters new-permitted-submitters-q is empty.

	* commands1.el (kom-change-presentation): Don't allow EMPTY when
	reading conf name (it means the same as the default initial
	value).
	(kom-change-conf-motd): Same here.
	(kom-set-presentation): Same here.
	(kom-set-motd-text): Same here.
	(kom-remove-presentation): Same here.
	(kom-change-password): Same here.

	* macros.el (lyskom-with-external-functions): Work even if
	byte-compile-unresolved-functions is not bound (e.g. in
	check-strings.el and when not compiled).

	Make initial value for reading confs more configurable:
	* filter.el (kom-filter-author): Simplified. Initial values are
	now computed in completing-read.el, not here.

	* completing-read.el (lyskom-read-conf-guess-initial): Added